Fix sidemenu overflow, document update disconnect

--- a/src/client/style/component/sideMenu.scss
+++ b/src/client/style/component/sideMenu.scss
@@ -1,3 +1,12 @@
+.side-menu {
+  width: 100%;
+  height: 100%;
+  & > .content {
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+  }
+}
 .side-navigation {
   list-style-type: none;
   margin: 0;
