--- a/src/client/style/component/sidebar.scss
+++ b/src/client/style/component/sidebar.scss
@@ -20,12 +20,11 @@
 
   & > .container {
     position: relative;
+    width: 100%;
+    height: 100%;
   }
 
   & > .content {
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
   }
 
   .hidden > & {
